PCA + Confunsion Matrix for Symbolic Alg
Generical Ajustments too